css & images new, index.html modified

--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
+<!DOCTYPE html>
 <html>
 	<head>
-
+		<meta charset="utf-8">
+		<title>Autumn Recipes</title>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 
 	<body>
-
+		<header>
+			<a href= "index.html" id="logo">
+			<h1>Autumn Recipes</h1>
+			<h2>Delicous Food For You!</h2>
+			</a>
+			<nav>
+				<ul>
+					<li><a href="index.html" class="selected">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="about.html">Contact</a></li>
+				</ul>
+			</nav>
+			<img src="img/autumn_pumkin.jpg" alt "">
+		</header>
+		<div id="wrapper">
+			<section>
+				<ul>
+					<li>
+						<a href="pumkin.html">
+							<img src="img/autumn_pumkin.jpg" alt "">
+							<p>Pumkin Recipes</p>
+						</a>
+					</li>
+					<li>
+						<a href="apple.html">
+							<img src="img/autumn_apple.jpg" alt "">
+							<p>Apple Recipes</p>
+						</a>
+					</li>
+					<li>
+						<a href="beet.html">
+							<img src="img/autumn_beet.jpg" alt "">
+							<p>Beet Recipes</p>
+						</a>
+					</li>
+					<li>
+						<a href="mushroom.html">
+							<img src="img/autumn_mushroom.jpg" alt "">
+							<p>Mushroom Recipes</p>
+						</a>
+					</li>
+				</ul>
+			</section>
+			<footer>
+				<p>&copy; 2014 Gwendolyn Bischoff.</p>
+			</footer>
+		</div>
 	</body>
 </html>
